# Graphics-Engine

./: README.md
IO/images/: blocks.ini  colorRect.ini  quartCirc.ini
docs/: Makefile
src/: CMakeLists.txt  Color.cpp  Color.h  Line2D.cpp  Line2D.h  Point2D.cpp  Point2D.h  easy_image.cc  easy_image.h  intro.cpp  intro.h
src/Debug/: main.cpp
src/Release/: main.cpp
